--- a/res/layout/recite_text.xml
+++ b/res/layout/recite_text.xml
@@ -1,7 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
-    
+    android:layout_height="match_parent"
+    android:background="#D6D6D6"
+    android:orientation="vertical" >
 
-</RelativeLayout>
+    <com.baoyz.swipemenulistview.SwipeMenuListView
+        android:id="@+id/fragment_tab1_listView"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:background="#B3A981" />
+
+</LinearLayout>
