--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -17,7 +17,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignTop="@+id/math_imageView"
-        android:layout_marginLeft="37dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="5dp"
         android:contentDescription="语文"
         android:src="@drawable/ic_launcher" />
 
@@ -37,7 +38,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignTop="@+id/Chinese_imageView"
-        android:layout_marginRight="37dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="17dp"
         android:contentDescription="英语"
         android:src="@drawable/ic_launcher" />
 
@@ -47,7 +49,7 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/Chinese_imageView"
         android:layout_below="@+id/Chinese_imageView"
-        android:layout_marginLeft="-15dp"
+        android:layout_marginLeft="15dp"
         android:layout_marginTop="17dp"
         android:gravity="left"
         android:text="n年级语文" />
@@ -67,35 +69,46 @@
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/math_textView"
         android:layout_alignRight="@+id/English_imageView"
-        android:layout_marginRight="-15dp"
+        android:layout_marginRight="15dp"
         android:gravity="right"
         android:text="n年级英语" />
 
-    <TextView
-        android:id="@+id/course_textView"
+    <ScrollView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_below="@+id/math_textView"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="76dp"
-        android:text="培训课程" />
+        android:layout_marginTop="27dp" >
 
-    <TextView
-        android:id="@+id/animation_textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/course_textView"
-        android:layout_below="@+id/course_textView"
-        android:layout_marginTop="57dp"
-        android:text="动画配音" />
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical|center_horizontal" >
 
-    <TextView
-        android:id="@+id/story_textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/animation_textView"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="57dp"
-        android:text="听故事" />
+            <TextView
+                android:id="@+id/course_textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:text="培训课程" />
+
+            <TextView
+                android:id="@+id/animation_textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@+id/course_textView"
+                android:layout_below="@+id/course_textView"
+                android:layout_marginTop="57dp"
+                android:text="动画配音" />
+
+            <TextView
+                android:id="@+id/story_textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/animation_textView"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="57dp"
+                android:text="听故事" />
+        </RelativeLayout>
+    </ScrollView>
 
 </RelativeLayout>
