--- a/res/layout/activity_chinese.xml
+++ b/res/layout/activity_chinese.xml
@@ -2,67 +2,80 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_span="2"
+    android:background="#80B547"
     android:orientation="vertical" >
 
-    <TableLayout
+    <ScrollView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_marginTop="10dp"
-        android:layout_span="2"
-        android:shrinkColumns="*"
-        android:stretchColumns="*" >
+        android:layout_height="wrap_content" >
 
-        <TableRow>
+        <TableLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginTop="5dp"
+            android:shrinkColumns="*"
+            android:stretchColumns="*" >
 
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="157dp"
-                android:onClick="ListenText"
-                android:text="听课文" >
-            </Button>
+            <TableRow>
 
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="157dp"
-                android:onClick="ListenAndWrite"
-                android:text="听写" >
-            </Button>
-        </TableRow>
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="257dp"
+                    android:background="@drawable/chinese_listen_text"
+                    android:onClick="ListenText"
+                    android:text="听课文" >
+                </Button>
 
-        <TableRow>
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="257dp"
+                    android:background="@drawable/chinese_write_text"
+                    android:onClick="ListenAndWrite"
+                    android:text="听写" >
+                </Button>
+            </TableRow>
 
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="157dp"
-                android:onClick="ReciteText"
-                android:text="背课文" >
-            </Button>
+            <TableRow>
 
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="157dp"
-                android:onClick="Repeat"
-                android:text="跟读" >
-            </Button>
-        </TableRow>
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="257dp"
+                    android:background="@drawable/chinese_recite_text"
+                    android:onClick="ReciteText"
+                    android:text="背课文" >
+                </Button>
 
-        <TableRow>
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="257dp"
+                    android:background="@drawable/chinese_read_text"
+                    android:onClick="Repeat"
+                    android:text="跟读" >
+                </Button>
+            </TableRow>
 
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="157dp"
-                android:onClick="FindNewWords"
-                android:text="查生词" >
-            </Button>
+            <TableRow>
 
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="157dp"
-                android:onClick="ComingSoon"
-                android:text="敬请期待" />
-        </TableRow>
-    </TableLayout>
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="257dp"
+                    android:background="@drawable/chinese_think_text"
+                    android:onClick="FindNewWords"
+                    android:text="查生词" >
+                </Button>
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="257dp"
+                    android:background="@drawable/chinese_do_text"
+                    android:onClick="ComingSoon"
+                    android:text="敬请期待" />
+            </TableRow>
+        </TableLayout>
+    </ScrollView>
 
 </LinearLayout>
