--- a/res/layout/asdf.xml
+++ b/res/layout/asdf.xml
@@ -21,4 +21,14 @@
         android:layout_height="wrap_content"
         android:text="Switch" />
 
+    <ToggleButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <ImageButton
+        android:id="@+id/imageButton1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@android:drawable/btn_star" />
+    
 </LinearLayout>
