--- a/res/layout/recite_text_main.xml
+++ b/res/layout/recite_text_main.xml
@@ -11,12 +11,13 @@
         android:layout_alignParentTop="true"
         android:background="#6F8291" >
 
-        <EditText
+        <TextView
             android:id="@+id/recite_text_main_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:clickable="false"
             android:editable="true"
+            android:focusable="true"
             android:gravity="center_vertical|center_horizontal|left"
             android:longClickable="false"
             android:text="asdf"
@@ -31,25 +32,27 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:background="#3f3f3f"
-        android:gravity="center_vertical"
+        android:gravity="center_vertical|center_horizontal"
         android:orientation="horizontal" >
 
         <TextView
             android:id="@+id/recite_text_main_textview_score"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
             android:gravity="left"
-            android:text="正确率: "
+            android:text="得分: "
             android:textColor="#FFFFFF"
             android:textSize="27sp" />
 
         <EditText
             android:id="@+id/recite_text_main_edit_text_score"
-            android:layout_width="wrap_content"
+            android:layout_width="87sp"
             android:layout_height="wrap_content"
-            android:editable="false"
-            android:text="57%"
+            android:gravity="center_horizontal|center_vertical"
+            android:maxLength="3"
+            android:maxLines="1"
+            android:text="100"
+            android:textColor="#EA2000"
             android:textSize="27sp" >
 
             <requestFocus />
@@ -58,9 +61,9 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="5dp"
-            android:layout_marginRight="5dp"
-            android:orientation="vertical" >
+            android:layout_gravity="center_vertical|center_horizontal"
+            android:gravity="center_vertical|center_horizontal"
+            android:orientation="horizontal" >
 
             <TextView
                 android:id="@+id/recite_text_main_textview_autojudge"
@@ -69,14 +72,25 @@
                 android:gravity="center_horizontal|center_vertical"
                 android:text="自动评分"
                 android:textColor="#FFFFFF"
-                android:textSize="27sp" />
+                android:textSize="27sp"
+                android:visibility="gone" />
 
             <TextView
                 android:id="@+id/recite_text_main_textview_userjudge"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal|center_vertical|top"
-                android:text="手动评分"
+                android:text="提交"
+                android:textColor="#FFFFFF"
+                android:textSize="27sp" />
+
+            <TextView
+                android:id="@+id/recite_text_main_textview_history_score"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal|center_vertical|top"
+                android:paddingLeft="15dp"
+                android:text="历史成绩"
                 android:textColor="#FFFFFF"
                 android:textSize="27sp" />
         </LinearLayout>
