--- a/res/layout/simple_spinner_dropdown_item.xml
+++ b/res/layout/simple_spinner_dropdown_item.xml
@@ -3,10 +3,11 @@
     android:id="@android:id/text1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#4ACC60"
     android:ellipsize="marquee"
     android:gravity="center_vertical|center_horizontal"
+    android:scrollHorizontally="true"
     android:singleLine="true"
-    android:background="#4ACC60"
     android:textSize="27sp" >
 
 </CheckedTextView>
