--- a/res/layout/find_new_words.xml
+++ b/res/layout/find_new_words.xml
@@ -57,8 +57,9 @@
                 android:dropDownHorizontalOffset="2dp"
                 android:dropDownVerticalOffset="1dp"
                 android:dropDownWidth="wrap_content"
-                android:gravity="center_vertical|center_horizontal"
+                android:gravity="center_vertical|left"
                 android:hint="请输入词语"
+                android:scrollHorizontally="true"
                 android:singleLine="true"
                 android:textSize="27sp" >
 
