--- a/res/color/recite_text_main_textview_color_selector.xml
+++ b/res/color/recite_text_main_textview_color_selector.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:state_pressed="true" android:color="#FFA500"/>
-    <item android:color="#000000"/>
+    <item android:color="#FFA500"/>
+    <item android:state_checked="true" android:color="#000000"/>
 
 </selector>
