--- a/res/layout/listen_write.xml
+++ b/res/layout/listen_write.xml
@@ -16,7 +16,8 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="#696969"
-            android:gravity="top" />
+            android:gravity="top"
+            android:spinnerMode="dialog" />
 
         <ImageView
             android:layout_width="wrap_content"
@@ -49,6 +50,7 @@
             android:text=""
             android:textColor="#25CB73"
             android:textSize="22sp" />
+
     </com.runcom.jiazhangbang.listenText.LyricView>
 
     <TextView
