--- a/res/layout/repeat.xml
+++ b/res/layout/repeat.xml
@@ -16,7 +16,8 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="#696969"
-            android:gravity="top" />
+            android:gravity="top"
+            android:spinnerMode="dialog" />
 
         <ImageView
             android:layout_width="wrap_content"
